# rdsap2012

./: README.md  setup.cfg
rdsap2012/: rdsap2012.py
rdsap2012/input_file_json_schema/: rdSAP_2012_input_schema.json
rdsap2012/tables/: table_S10_assumed_roof_u_values.csv  table_S11_floor_u_value_calculation.csv  table_S12_exposed_semi_exposed_floor_u_values.csv  table_S13_thermal_bridging.csv  table_S14_window_characteristics.csv  table_S15_non_separated_conservatory.csv  table_S15a_doors.csv  table_S16_living_area_fraction.csv  table_S17_cylinder_data.csv  table_S1_age_bands.csv  table_S3_wall_thickness.csv  table_S4_window_area.csv  table_S6_wall_u_values_england_and_wales.csv  table_S7_wall_u_values_scotland.csv  table_S8_wall_u_values_northern_ireland.csv  table_S8a_wall_u_values_park_homes.csv  table_S8b_u_values_party_walls.csv  table_S9_roof_u_values.csv
tests/: rdSAP_input_test.json  test_rdsap2012.py
