[metadata]
name = rdsap2012
version = 0.0.0
author = Steven Firth
author_email = s.k.firth@lboro.ac.uk
description = RdSAP2012 energy calculation method in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/building-energy/rdsap2012
project_urls =
    Source = https://github.com/building-energy/rdsap2012/rdsap2012
    Bug Tracker = https://github.com/stevenkfirth/csvw_functions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = rdsap2012
python_requires = >=3.6

[options.packages.find]
where = rdsap2012

[options.package_data]
tables =
    *.csv